--- a/assets/css/components/slider.css
+++ b/assets/css/components/slider.css
@@ -15,6 +15,10 @@
   border-bottom: 1px solid var(--color-black);
 }
 
+.slider-content::-webkit-scrollbar {
+  display: none;
+}
+
 .slider-controls {
   width: 3rem;
   position: relative;
