--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -18,4 +18,7 @@
  * Components
  */
 @import "./components/button.css";
+@import "./components/image.css";
 @import "./components/slider.css";
+@import "./components/product-card.css";
+@import "./components/load-more-button.css";
